Logtalk/examples/errors/ccredef.lgt

:- object(ccredef).
		
	::(_).
	
:- end_object.

